--- a/index.html
+++ b/index.html
@@ -1,76 +1,60 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html lang="en">
+  <!--PWA HTML Template from https://maddhruv.github.io/html-boilerplate-->
+  <head>
+    <!--meta tags-->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Starter Webkit</title>
+    <meta name="description" content="Starter Webkit by Dhruv Jain [https://github.com/maddhruv]">
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <!--icons-->
+    <link rel="apple-touch-icon" sizes="57x57" href="images/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png">
+    <!--social tags-->
+    <!--facebook-->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Starter Webkit">
+    <meta property="og:description" content="Starter Webkit by Dhruv Jain [https://github.com/maddhruv]">
+    <meta property="og:url" content="https://maddhruv.github.io/">
+    <meta property="og:locale" content="en_US">
+    <!--twitter-->
+    <meta name="twitter:site" content="@maddhruv">
+    <meta name="twitter:title" content="Starter Webkit">
+    <meta name="twitter:description" content="Starter Webkit by Dhruv Jain [https://github.com/maddhruv]">
+    <meta name="twitter:url" content="https://maddhruv.github.io/">
+  </head>
+  <body>
+    <h1>This is an<b>a Starter Webkit</b></h1>
+    <script>
+// change UA-XXXXX-Y to your site's id
+var ga
+window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date()
+ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="description" content="_your description goes here_" />
-<meta name="keywords" content="_your,keywords,goes,here_" />
-<link rel="stylesheet" type="text/css" href="color/blue_muted.css" media="screen" title="style (screen)" />
-<link rel="stylesheet" type="text/css" href="mainstyle/light.css" media="screen" title="style (screen)" />
-<title>Avkash Hirpara</title>
-</head>
-<script src='http://bloggerblogwidgets.googlecode.com/files/way2blogging.org-tripleflap.js' type='text/javascript'> 
-</script> 
-<script type='text/javascript'> 
-var twitterAccount = "avkashhirpara"; 
-var tweetThisText = " Avkash Hirpara : http://avkash-hirpara.appspot.com/ "; 
-tripleflapInit(); 
-</script> 
-<body>
-<div id="nav">
-    <ul>
-        <li><a href="index.jsp">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="/DisplaySnippetsLinks">Tutorials</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Guitar's</a></li>
-        <li><a href="#">References</a></li>
-        <li><a href="#">My Profile</a></li>
-        <li><a href="#">Apps.</a></li>
-    </ul>
-</div>
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+    <script>if ('serviceWorker' in navigator) {
+  navigator.serviceWorker
+  .register('/service-worker.js')
+  .then(function () {
+    console.log('Hurray! Service Worker Registered')
+  })
+}
 
-<div id="head">
-<h1>Avkash Hirpara</h1>
-<h2>Perhaps You are Confuse, But Show Must Go On..</h2>
-</div>
-<div class="main">
-
-<div id="right">
-
-<h3></h3>
-<ul>
-    <li><a class="green" href="#">Home</a></li>
-    <li><a class="orange" href="#">About</a></li>
-    <li><a href="/DisplaySnippetsLinks">Tutorials</a></li>
-    <li><a class="blue" href="#"></a>Gallery</li>
-    <li><a class="green" href="#">Contact</a></li>
-    <li><a class="orange" href="#">Guitar's'</a></li>
-    <li><a class="blue" href="#">References</a></li>
-    <li><a class="blue" href="#">My Profile</a></li>
-    <li><a class="blue" href="#">Apps.</a></li>
-</ul>
-
-</div>
-
-<div id="content">
-<h1>THE FORMAL INTRODUCTION</h1> 
-<h2>ABOUT SITE</h2>
-<img class="content" src="stones.jpg" alt="" />
-This is a personal web-site,developed to demonstrate. Google Apps Engine capability over the java.
- 
-
-
-</div>
-</div>
-
-<div class="main">
-
-
-</div>
-
-</body>
+    </script>
+  </body>
 </html>
