--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <meta name="twitter:url" content="https://maddhruv.github.io/">
   </head>
   <body>
-    <h1>This is an<b>a Starter Webkit</b></h1>
+    <h1>This is Starter Webkit</b></h1>
     <script>
 // change UA-XXXXX-Y to your site's id
 var ga
